--- a/QA.html
+++ b/QA.html
@@ -30,6 +30,17 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+
+
+    <style>
+        @media (max-width: 991px) {
+                .navbar-collapse {
+                    background-color: white;
+            }
+        }
+    </style>
+
 </head>
 
 <body>
@@ -81,7 +92,22 @@
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
                 <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
                 <a href="QA.html" class="nav-item nav-link active">Вопросы и Ответы</a>
-                <a href="contact.html" class="nav-item nav-link">Контакты</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База Знаний</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="feature.html" class="dropdown-item">Книги</a>
+                        <a href="quote.html" class="dropdown-item">Презентации</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a>
+                    </div>
+                </div>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="team.html" class="dropdown-item">Наша Команда</a>
+                        <a href="testimonial.html" class="dropdown-item">Отзызы</a>
+                        <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
+                    </div>
+                </div>
                 <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -94,7 +120,7 @@
                     </div>
                 </div> -->
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -106,9 +132,9 @@
             <h1 class="display-3 text-white mb-4 animated slideInDown">Вопросы и ответы по государственной и муниципальной службе в Кыргызской Республике</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Projects</li>
+                    <li class="breadcrumb-item"><a href="./index.html">Главная</a></li>
+                    <li class="breadcrumb-item"><a href="./about.html">Новости</a></li>
+                    <!-- <li class="breadcrumb-item active" aria-current="page">Projects</li> -->
                 </ol>
             </nav>
         </div>
@@ -312,6 +338,60 @@
         </div>
     </div>
     <!-- Projects End -->
+
+
+
+    <!-- Quote Start -->
+    <div class="container-fluid py-5">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <p class="fs-5 fw-bold text-primary">Задайте Вопрос</p>
+                <h1 class="display-5 mb-5">Ваш Вопрос</h1>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-7">
+                    <div class="bg-light rounded p-4 p-sm-5 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="row g-3">
+                            <div class="col-sm-6">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name">
+                                    <label for="gname">Введите Ваше Имя</label>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-floating">
+                                    <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email">
+                                    <label for="gmail">Введите Эл. Адрес</label>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control border-0" id="cname" placeholder="Child Name">
+                                    <label for="cname">Введите Ваш Номер Телефона</label>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control border-0" id="cage" placeholder="Child Age">
+                                    <label for="cage">Введите Тему Вопроса</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-floating">
+                                    <textarea class="form-control border-0" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
+                                    <label for="message">Введите Ваш Вопрос</label>
+                                </div>
+                            </div>
+                            <div class="col-12 text-center">
+                                <button class="btn btn-primary py-3 px-4" type="submit">Отправить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Quote End -->
 
 
     <!-- Footer Start -->
