--- a/about.html
+++ b/about.html
@@ -30,6 +30,19 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+
+
+
+    <style>
+        @media (max-width: 991px) {
+                .navbar-collapse {
+                    background-color: white;
+            }
+        }
+    </style>
+
+
 </head>
 
 <body>
@@ -81,7 +94,22 @@
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
                 <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
-                <a href="contact.html" class="nav-item nav-link">Контакты</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База Знаний</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="feature.html" class="dropdown-item">Книги</a>
+                        <a href="quote.html" class="dropdown-item">Презентации</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a>
+                    </div>
+                </div>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="team.html" class="dropdown-item">Наша Команда</a>
+                        <a href="testimonial.html" class="dropdown-item">Отзызы</a>
+                        <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
+                    </div>
+                </div>
                 <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
 
                 <!-- <div class="nav-item dropdown">
@@ -96,7 +124,7 @@
                 </div> -->
 
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -108,9 +136,9 @@
             <h1 class="display-3 text-white mb-4 animated slideInDown">Новости</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">About</li>
+                    <li class="breadcrumb-item"><a href="./index.html">Главная</a></li>
+                    <li class="breadcrumb-item"><a href="./QA.html">Вопросы</a></li>
+                    <!-- <li class="breadcrumb-item active" aria-current="page">Projects</li> -->
                 </ol>
             </nav>
         </div>
