--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+
+
+    <style>
+        @media (max-width: 991px) {
+                .navbar-collapse {
+                    background-color: white;
+            }
+        }
+    </style>
+
+
 </head>
 
 <body>
@@ -82,7 +94,22 @@
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
                 <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
-                <a href="contact.html" class="nav-item nav-link">Контакты</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База Знаний</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="books.html" class="dropdown-item">Книги</a>
+                        <a href="presentations.html" class="dropdown-item">Презентации</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a>
+                    </div>
+                </div>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="team.html" class="dropdown-item">Наша Команда</a>
+                        <a href="testimonial.html" class="dropdown-item">Отзызы</a>
+                        <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
+                    </div>
+                </div>
                 <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
 
                 <!-- <div class="nav-item dropdown">
